--- a/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
+++ b/content/post/2023-02-22-nyed-data-explorer-shows-15-years-of-charter-school-success/index.Rmd
@@ -15,7 +15,7 @@ Three years ago, in the course of building personal projects in R using public d
 
 # Classical Charter Schools and the Charter Debate
 
-Classical Charter Schools operates four schools demonstrating outstanding academic performance in an under-served community, where there is not much evidence of educational accountability (based on the results which will be shown below). With approximately 90% economically-disadvantaged students, it achieves close to 90% proficiency in both ELA and Math, on par with the wealthiest NYS districts, while spending much less per pupil than DOE schools. This is accomplished with a variety of strategies, but most importantly for me, a big commitment to collecting and using data to make decisions. This post will show the result of extensive data cleaning, of over 3 million rows of school performance data, from the [NYED Data](https://data.nysed.gov) site. Despite five year's of daily experience manipulating data with code, untangling this data took much more effort than I care to admit. After the recent broad drop in proficiency related to the COVID, and the renewal of public debate about lifting the cap on new charter schools, it seems like there has never been a better time to make clean and accessible school performance data available. This post launches a "minimum viable" version of a Shiny App called [NYED Data Explorer](https://luceyda.shinyapps.io/nyedapp/) (accessible in this blog post below), which I hope may put to rest any questions over whether more charters should be allowed.
+Classical Charter Schools operates four schools demonstrating outstanding academic performance in an under-served community, where there is not much evidence of educational accountability (based on the results which will be shown below). With approximately 90% economically-disadvantaged students, it achieves close to 90% proficiency in both ELA and Math, on par with the wealthiest NYS districts, while spending much less per pupil than DOE schools. This is accomplished with a variety of strategies, but most importantly for me, a big commitment to collecting and using data to make decisions. This post will show the result of extensive data cleaning, of over 3 million rows of school performance data, from the [NYED Data](https://data.nysed.gov) site. Despite five year's of daily experience manipulating data with code, untangling these releases took much more effort than I care to admit. After the recent broad drop in proficiency, related to the COVID, and the renewal of public debate about lifting the cap on new charter schools, it seems like there has never been a better time to make clean and accessible school performance data available. This post launches a "minimum viable" version of a Shiny App called [NYED Data Explorer](https://luceyda.shinyapps.io/nyedapp/) (accessible in this blog post below), which I hope may put to rest any questions over whether more charters should be allowed.
 
 # Thoughts on NYED and Open Public Data
 
@@ -27,15 +27,15 @@ Schools record and report student attributes, but in many cases, it seems likely
 
 # Navigating the App
 
-The interactive `{golem}` Shiny app, which will be shown below (please be patient if it takes a moment to load), was built with the `{shinyWidgets}` package, which has the `selectizeGroup` module allowing "conditional drop-down filtering". By reducing the subset of each filter with the other filters, it is possible to rapidly narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) for more detail.
+The interactive `{golem}` Shiny app, which will be shown below (please be patient if it takes a moment to load), was built with the `{shinyWidgets}` package `selectizeGroup` module, allowing "conditional drop-down filtering". By reducing the subset of each filter with the other filters, it is possible to narrow down to desired groups with little or no latency. I discovered this by accident after trying a lot of things which didn't work nearly as well, and still feel that it may not be well known as it deserves to be (see discussion in [Introducing the Redwall IRS SOI Tax Dashboard](https://redwallanalytics.com/2021/08/06/introducing-the-redwall-irs-soi-tax-dashboard/)) for more detail.
 
 
 <iframe width="650" height="800" scrolling="no" frameborder="0" src="https://luceyda.shinyapps.io/nyedapp"> title="Embedded NYED Data Explorer App" allowfullscreen</iframe>
 
 
-In the title image at the very beginning of this post, the app is shown filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left of the interactive app, try those filters, because when loaded, the app shows all subgroups and tests taken over the last 15 years (counting the same students in multiple groups). Once filtered, the population students taking the ELA (including both DOE and charter public schools), should decline from 1.2 million in 2007 down to to 900,000 last year. When using the app, it is important to make sure that the subgroups selected are mutually exclusive. For example, a "White" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates.
+In the title image at the very beginning of this post, the app is shown filtered for the Subgroup and Test of "All Students" and the "ELA", respectively. Using the ellipsis on the top left of the interactive app, try those filters, because when loaded, the app shows all subgroups and tests taken over the last 15 years (counting the same students in multiple groups). Once filtered, the population students taking the ELA (including both DOE and charter public schools), should decline from 1.2 million in 2007 to 900,000 last year. When using the app, it is important to make sure that the subgroups selected are mutually exclusive. For example, a "Black or African American" student may also be included in "Students with Disabilities", so choosing both of those subgroups would double count the total tested and give invalid pass rates.
 
-Again using our "conditional drop-down filtering", the "Needs/Resource Category" labels are NY State classifications, which is helpful because it includes groups for NYC (DOE schools) and for all NYS Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" reduces the County selections offered to only the desired five ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND"). Once NYC counties and the Needs/Resource Group are selected, the "Lift" column populates. "Lift" is defined as the aggregated pass rate of the selected group, divided by that of all the other test takers at schools in those same geographies and subgroups (but not including the selected schools). So in this case, the "Lift" indicates that 308,000 students in NYC DOE schools have a pass rate, which in 2022, is 91.3% of the other schools not in the subset (in this case charter schools)
+Again using our "conditional drop-down filtering", the "Needs/Resource Category" labels are NY State classifications, which is helpful because it includes groups for NYC (DOE schools) and for all NYS Charters. My interest is largely Charter schools around NYC, so choosing "NYC" in the "Needs/Resource Category" reduces the County selections offered to only the desired five ("QUEENS", "BRONX", "KINGS", "NEW YORK" and "RICHMOND"). Once NYC counties and the Needs/Resource Group are selected, the "Lift" column populates. "Lift" is defined as the aggregated pass rate of the selected group, divided by that of all the other test takers at schools in those same geographies and subgroups (not including the selected schools). So in this case, the "Lift" indicates that 308,000 students in NYC DOE schools have a pass rate, which in 2022, is 91.3% of the other schools not in the subset (in this case charter schools)
 
 ![NYED Data Explorer filtered for All Students in NYC](images/all_students_nyc_counties.png)
 
@@ -51,7 +51,7 @@ At Classical like many NYC charters, about 90% of students also fall into these 
 
 ![NYED Data Explorer filtered for African American and Latino students at South Bronx Classical](images/nyed_sbc_math.png)
 
-Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider also looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools and have demonstrated excellent results over time, and there are surely others.
+Although Classical Charter Schools has been especially successful in navigating the Covid disruption, it is not the only network with persistent strong performance. Please also consider also looking at Success, Icahn, Bronx Excellence and Zeta, which of which operate multiples schools demonstrating excellent results over time, and there are surely others.
 
 ![NYED Data Explorer filtered for Students with Disabilities at South Bronx Classical](images/nyed_swb_math.png)
 
