--- a/content/post/2023-04-22-thoughts-on-work-live-ride-using-greenwich-ct-parcel-data/index.Rmd
+++ b/content/post/2023-04-22-thoughts-on-work-live-ride-using-greenwich-ct-parcel-data/index.Rmd
@@ -28,12 +28,11 @@ options(scipen = 999)
 
 ![MetroNorth New Haven Line Stations](images/mnr.png)
 
-
 # Introduction
 
 Connecticut has long had some of the highest income and home prices in the US. Although home prices have trailed national rate of appreciation in recent decades, from a high starting point, housing has gotten a lot more expensive in absolute terms and is still out of reach for too many. High housing costs have constrained population growth in many towns, likely slowed income growth by impeding business formation, and contributed to the State's high costs and taxes. Starting in the 1920's, many CT Towns started requiring large minimum parcel sizes in zoning, among other regulations, often with exclusionary intent, well documented in [On The Line: How Schooling, Housing, and Civil Rights Shaped Hartford and its Suburbs](https://ontheline.trincoll.edu/index.html). The effects of these policies have become acute due to the demand surge caused by the COVID-19 pandemic, which gobbled up residual excess supply left by the Global Financial Crisis. In 2021, a group called [Desegregate CT Work-Live-Ride](https://www.desegregatect.org/work-live-ride) began making a series of reform proposals, a central one being [Bill #6831](https://cga.ct.gov/2025/TOB/H/PDF/2025HB-06831-R00-HB.PDF?mc_cid=91e1b53e90&mc_eid=27bb054ad1) (`WLR`), to allow towns to opt into "Transit Oriented Development" allowing "by right" development of minimum densities and mixed use development near transit stations. This group consists of dozens of housing advocacy groups with backing from the Regional Plan Association (`RPA`), also non-profit whose largest contributors Board Members and often Executive leadership have often come from the New York real estate development industry.
 
-One of the `Desegregate` group's main points has been that only single family homes are allowed as of right on 90% of parcels in the State, while much less commonly for two family housing (and almost not at all more than that). Also, 80% of those single family parcels have been zoned 1+ acres, constraining housing supply growth increasingly over decades and driving up home ownership costs and sprawl. Finally, many towns have allowed only single family residential zoning around vital transit hubs. These points all are unfortunately true, but in my opinion, there is a bait and switch using the valid large lot issue as the reason we need the inflexible `WLR`, when densities near MNR have dramatically lower percentages of residential housing and very few large nearby parcels.
+One of the `Desegregate` group's main points has been that only single family homes are allowed as of right on 90% of parcels in the State, while much less commonly for two family housing (and almost not at all more than that). Also, 80% of those single family parcels have been zoned 1+ acres, constraining housing supply growth increasingly over decades and driving up home ownership costs and sprawl. Finally, many towns have allowed only single family residential zoning around vital transit hubs. These points all are unfortunately true, but in my opinion, there is a bait and switch using the valid large lot issue as the reason we need the inflexible `WLR`, when densities near MNR have much lower percentages of residential housing and very few large nearby parcels.
 
 The Connecticut Parcel and Cama data was first added to the Portal after laws requiring it passed in 2021, and offering the opportunity to look at the exact Polygon location data for almost 1.3 million parcels. This made me curious to investigate the lot sizes and housing density in those locations using the [CT Geodata Portal](https://geodata.ct.gov/pages/parcels) and to explore what it all would mean for my Town of Greenwich. There are surely a lot of experts with more knowledge of these issues and stronger views on either side mine. I agree with most of the sentiments of the pro-housing reform coalition, but hope on the eve of the legislative session, this post injects what has seemed absent from the contentious discussions thus far. For full disclosure, I grew up in Stamford and live near a station in Greenwich (but not within a potential transit zone), and probably carry some of those biases against what might be done in a suburban location, but also have yet to see a multi-family residential project in my town which I opposed (likely putting me among the most pro-housing residents in my community). There is a lot of data cleaning and coding in this post, so please feel free to skip ahead to `Results and Analysis` to the tables and charts of findings and parting thoughts.
 
